# 2nex

./: .gitignore  README.md
.github/workflows/: verify.yml
inputs_cache/: configure-max-path.patch  coreutils-getcwd-path-max.patch  inetutils-no-proc.patch
manifests/bootstrap/phase0/: 1-bootstrap_tools.yaml
manifests/bootstrap/phase1/: 1-m4.yaml  10-gzip.yaml  11-make.yaml  12-patch.yaml  13-sed.yaml  14-tar.yaml  15-xz.yaml  16-bzip2.yaml  17-binutils.yaml  18-gcc.yaml  19-convert.yaml  2-ncurses.yaml  3-bash.yaml  4-coreutils.yaml  5-diffutils.yaml  6-file.yaml  7-findutils.yaml  8-gawk.yaml  9-grep.yaml
manifests/bootstrap/phase2/: 1-gettext.yaml  2-bison.yaml  3-perl.yaml  4-python3.yaml  5-texinfo.yaml
manifests/bootstrap/phase3/: 0-2nex_utilities.yaml  0-strip_nondeterminism.yaml  1-glibc.yaml  10-bc.yaml  11-flex.yaml  12-tcl.yaml  13-expect.yaml  14-dejagnu.yaml  15-pkgconf.yaml  16-binutils.yaml  17-gmp.yaml  18-mpfr.yaml  19-mpc.yaml  2-zlib.yaml  20-attr.yaml  21-acl.yaml  22-libcap.yaml  23-libxcrypt.yaml  24-shadow.yaml  25-gcc.yaml  29-linux-headers.yaml  3-bzip2.yaml  30-ncurses.yaml  31-sed.yaml  32-psmisc.yaml  33-gettext.yaml  34-bison.yaml  35-grep.yaml  36-bash.yaml  37-libtool.yaml  38-gdbm.yaml  39-gperf.yaml  4-xz.yaml  40-expat.yaml  41-inetutils.yaml  42-less.yaml  43-perl.yaml  44-perl-xml-parser.yaml  45-intltool.yaml  46-autoconf.yaml  (+28 more)
src/builder/: Cargo.toml
src/builder/src/: main.rs
