[package]
name = "nex"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
nix = { version = "0.28.0", features = ["sched", "user"] }
reqwest = { version = "0.12.2", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.8"
tempfile = "3.10.1"
walkdir = "2.5.0"
num_cpus = "1.16.0"
hostname = "0.4.0"
content_disposition = "0.4.0"
url = "2.5.2"

[dependencies.ostree]
version = "0.19.1"
features = ["v2021_1"]
